# docai-platform

./: .coverage  .gitignore  Makefile  README.md  ai-document-management-best-practices.md  docker-compose.yml  phased-implementation-plan.md  pyproject.toml  test_doc.py
app/: main.py
app/agent/: __init__.py  agent.py  tools.py
app/api/: __init__.py  auth.py  documents.py  query.py  versions.py
app/auth/: __init__.py  audit.py  dependencies.py  jwt.py  models.py  password.py  permissions.py
app/core/: embedding.py  infrastructure.py  llm_client.py  models.py
app/generation/: __init__.py  answer.py
app/ingestion/: __init__.py  chunker.py  parser.py  pipeline.py  summarizer.py
app/retrieval/: __init__.py  hybrid_search.py  router.py
app/versioning/: detector.py  diff_engine.py
config/: settings.py
docker/elasticsearch/: Dockerfile
docker/postgres/: init.sql  phase5_auth.sql
docs/: tech-selection.md
scripts/: eval_rag_quality.py  init_infrastructure.py  test_doc_parser.py  test_meta.py  test_meta2.py  test_phase2_flow.py  test_query.py  validate_phase1.py  verify_services.py
tests/: conftest.py  test_api.py  test_chunker.py  test_diff_engine.py  test_generation.py  test_parser_integration.py  test_retrieval.py  test_version_models.py
tests/test_docs/: README.md
tests/test_questions/: evaluation_set.yaml
web/: Dockerfile  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/documents/: page.tsx
web/src/app/upload/: page.tsx
web/src/app/versions/[docId]/: page.tsx
web/src/components/layout/: MainLayout.tsx
web/src/services/: api.ts
web/src/types/: api.ts
