[project]
name = "docai-platform"
version = "0.1.0"
description = "AI-powered Enterprise Document Management System"
requires-python = ">=3.11"

dependencies = [
    # ── Web 框架 ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",       # 文件上传

    # ── 文档解析 ──
    "pymupdf>=1.25.0",                # PDF 文本提取
    "docling>=2.15.0",                # 通用文档解析 (Word/PPT/PDF)
    "python-docx>=1.1.0",             # Word 文件读取
    "openpyxl>=3.1.0",                # Excel 文件读取
    "python-pptx>=1.0.0",             # PPT 文件读取

    # ── NLP & 分块 ──
    "tiktoken>=0.8.0",                # Token 计数 (OpenAI tokenizer)
    "nltk>=3.9.0",                    # 句子分割

    # ── 嵌入模型 ──
    "sentence-transformers>=3.3.0",   # 运行 BGE-M3 等模型
    "torch>=2.4.0",                   # PyTorch

    # ── 向量数据库 ──
    "qdrant-client>=1.12.0,<1.13.0",  # Qdrant Python SDK

    # ── 全文搜索 ──
    "elasticsearch[async]>=8.16.0,<9.0.0",   # Elasticsearch SDK

    # ── 关系型数据库 ──
    "asyncpg>=0.30.0",                # PostgreSQL async driver
    "sqlalchemy[asyncio]>=2.0.36",    # ORM

    # ── 对象存储 ──
    "minio>=7.2.0",                   # MinIO Python SDK

    # ── 缓存 ──
    "redis>=5.2.0",                   # Redis SDK

    # ── LLM 客户端 ──
    "anthropic>=0.39.0",              # Claude API
    "openai>=1.55.0",                 # OpenAI API (备选)

    # ── 工具库 ──
    "pydantic>=2.10.0",               # 数据校验
    "pydantic-settings>=2.6.0",       # 配置管理
    "httpx>=0.28.0",                  # HTTP 客户端
    "tenacity>=9.0.0",                # 重试机制
    "structlog>=24.4.0",              # 结构化日志
    "tqdm>=4.67.0",                   # 进度条
    "PyYAML>=6.0.1",                  # YAML 解析
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ipython>=8.30.0",
]

ocr = [
    "surya-ocr>=0.6.0",              # OCR (需要 GPU)
    "paddleocr>=2.9.0",              # 备选 OCR
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "config*"]
exclude = ["tests*", "docker*", "docs*"]
